// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<ul
  className="list-styled"
>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "endpoint",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.endpoint"
    />
  </li>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis"
      id="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis"
      values={
        Object {
          "run_analysis_value": <strong>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis.values.gradle
          </strong>,
          "section": <strong>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis.section
          </strong>,
        }
      }
    />
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "section",
          "properties",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.advanced_properties"
    />
    :
    <CodeSnippet
      snippet="# Additional properties that will be passed to the scanner,
# Put one key=value per line, example:
# sonar.exclusions=**/*.bin
sonar.projectKey=projectKey"
    />
  </li>
</ul>
`;

exports[`should render correctly 2`] = `
<ul
  className="list-styled"
>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "endpoint",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.endpoint"
    />
  </li>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis"
      id="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis"
      values={
        Object {
          "run_analysis_value": <strong>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis.values.maven
          </strong>,
          "section": <strong>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis.section
          </strong>,
        }
      }
    />
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "section",
          "properties",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.advanced_properties"
    />
    :
    <CodeSnippet
      snippet="# Additional properties that will be passed to the scanner,
# Put one key=value per line, example:
# sonar.exclusions=**/*.bin
sonar.projectKey=projectKey"
    />
  </li>
</ul>
`;

exports[`should render correctly 3`] = `
<ul
  className="list-styled"
>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "endpoint",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.endpoint"
    />
  </li>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis"
      id="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis"
      values={
        Object {
          "run_analysis_value": <strong>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis.values.other
          </strong>,
          "section": <strong>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis.section
          </strong>,
        }
      }
    />
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "mode",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.manual"
    />
  </li>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.run.key.sentence"
      id="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.run.key.sentence"
      values={
        Object {
          "button": <ClipboardIconButton
            copyValue="projectKey"
          />,
          "key": <code
            className="rule"
          >
            projectKey
          </code>,
          "project_key": <b>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.run.key.sentence.project_key
          </b>,
        }
      }
    />
  </li>
</ul>
`;

exports[`should render correctly 4`] = `
<ul
  className="list-styled"
>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "endpoint",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.endpoint"
    />
  </li>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis"
      id="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis"
      values={
        Object {
          "run_analysis_value": <strong>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis.values.cfamily
          </strong>,
          "section": <strong>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis.section
          </strong>,
        }
      }
    />
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "mode",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.manual"
    />
  </li>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.run.key.sentence"
      id="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.run.key.sentence"
      values={
        Object {
          "button": <ClipboardIconButton
            copyValue="projectKey"
          />,
          "key": <code
            className="rule"
          >
            projectKey
          </code>,
          "project_key": <b>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.run.key.sentence.project_key
          </b>,
        }
      }
    />
  </li>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare_additional.ccpp"
      id="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare_additional.ccpp"
      values={
        Object {
          "additional": <b>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare_additional.ccpp.additional
          </b>,
          "advanced": <b>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare_additional.ccpp.advanced
          </b>,
          "button": <ClipboardIconButton
            copyValue="sonar.cfamily.build-wrapper-output=bw-output"
          />,
          "property": <code
            className="rule"
          >
            sonar.cfamily.build-wrapper-output=bw-output
          </code>,
        }
      }
    />
  </li>
</ul>
`;

exports[`should render correctly 5`] = `
<ul
  className="list-styled"
>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        Array [
          "endpoint",
        ]
      }
      translationKey="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.endpoint"
    />
  </li>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis"
      id="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis"
      values={
        Object {
          "run_analysis_value": <strong>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis.values.dotnet
          </strong>,
          "section": <strong>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.prepare.run_analysis.section
          </strong>,
        }
      }
    />
  </li>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.run.key.sentence"
      id="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.run.key.sentence"
      values={
        Object {
          "button": <ClipboardIconButton
            copyValue="projectKey"
          />,
          "key": <code
            className="rule"
          >
            projectKey
          </code>,
          "project_key": <b>
            onboarding.tutorial.with.azure_pipelines.BranchAnalysis.run.key.sentence.project_key
          </b>,
        }
      }
    />
  </li>
</ul>
`;
